<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_large"
            android:background="@color/white">

            <TextView
                android:id="@+id/SeekText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seektext"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_normal"
                android:textSize="@dimen/text_size_normal"/>

            <SeekBar
                android:id="@+id/seekBarr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:max="100"
                android:progress="67"
                android:progressTint="@color/pastel_green"
                android:thumbTint="@color/pastel_green" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_normal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/edit_text"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/pastel_green"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal">

                <TextView
                    android:id="@+id/spinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SpinnerText"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal"/>

                <Spinner
                    android:id="@+id/Spinnerr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/pastel_green" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:src="@drawable/panda"
                android:contentDescription="@string/description" />

            <LinearLayout
                android:id="@+id/checkbox_groupp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <CheckBox
                    android:id="@+id/checkbox11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optionC11"
                    android:textColor="@color/black"
                    app:buttonTint="@color/pastel_green"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_view11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:text="@string/textR1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"/>

            <RadioGroup
                android:id="@+id/radio_groupp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optionR11"
                    android:textColor="@color/black"
                    app:buttonTint="@color/pastel_green" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optionR21"
                    android:textColor="@color/black"
                    app:buttonTint="@color/pastel_green" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optionR31"
                    android:textColor="@color/black"
                    app:buttonTint="@color/pastel_green" />
            </RadioGroup>

            <Switch
                android:id="@+id/switchh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switchButton"
                android:textColor="@color/black"
                android:thumbTint="@color/pastel_green"
                android:trackTint="@color/light_green"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_text"
                android:textColor="@color/black"
                android:backgroundTint="@color/pastel_green"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium" />

            <TextView
                android:id="@+id/progressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Progress"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="@dimen/text_size_normal"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/margin_small"
                android:progressTint="@color/pastel_green" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

